# cryptXor

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  main.rs
tests/: encrypt_tests.rs
