[package]
name = "crypt_xor"
version = "0.1.0"
authors = ["Phil <PhilboBaggins@users.noreply.github.com>"]
edition = "2018"
description = "A joke encryption utility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PhilboBaggins/cryptXor"

[dependencies]
clap = "2.33.0"
exitcode = "1.1.2"
indicatif = "0.16.2"
rand = "0.8.5"

[dev-dependencies]
cargo-husky = "1"
